# HDCR

./: .gitignore  AUTHORS  Makefile  Makefile.am  README.md  bootstrap  configure.ac  configure.scan  libtool
archive/: makefile_bak
docs/: BUILDING.md  INSTALL.md  IPAD.md  README.md
libdip/: Makefile  Makefile.am  pngReadHdr.c  pngio.h  timediff.c
libdip/src/: error.c  padarray.c  pngClose.c  pngOpen.c  pngWarningHandler.c  pngWriteHdr.c
matlab/: .hdcr.m.swp  hdcr.m
src/: .thresh.c.swp  Hoshen-Kopelmanmcc.c  Hoshen-Kopelmanmcc.h  IO.h  Makefile.am  benchmarking.c  benchmarking.h  hdcr.c  hdcr.h  hw5.c  hw5_test.c  hw5_test.h  main.c  main.h  thresh.c  thresh.h
src/lib/: ECE576A.h  Hoshen-Kopelmanmcc.h  IO.c  IO.h  cppOpenCV2Helper.cpp  cppOpenCV2Helper.hpp  cppmorph.cpp  cppmorph.hpp  cppssim.cpp  cppthresh.cpp  cppthresh.hpp  libhdcr.c  libhdcr.h  mcc.c  mcc.h  morph.c  morph.h  ssim.c  ssim.h  thinning.c  thinning.h  thresh.c  thresh.h
src/libdip/: dip.h  matalloc.c  matfree.c  pngErrorHandler.c  pngReadRow.c  pngWriteRow.c
src/libdip/.libs/: libdip.lai
